--- a/app/src/main/res/values-ar-rLB/strings.xml
+++ b/app/src/main/res/values-ar-rLB/strings.xml
@@ -124,49 +124,79 @@
     <string name="ok">حسنا</string>
     <string name="diagnostics_configuration">إعداد التشخيص</string>
     <string name="this_feature_needs_pre_configuration_before_you_can_use_it_please_check_the_info_for_more_information">تحتاج هذه الميزة إلى إعداد مسبق قبل أن تتمكن من استخدامها. يرجى التحقق من "المعلومات" لمزيد من المعلومات.</string>
+<!--    <string name="diagnostic_guide">-->
+<!--         "دليل المستخدم: استخدام ميزة التشخيص في AutoMate\n\n-->
+<!--         للاستفادة من ميزة التشخيص لتطبيق AutoMate، اتبع الخطوات التالية. تأكد من أن لديك التكوينات الضرورية للأجهزة والشبكة:\n\n-->
+<!--         الأجهزة والاتصالات المطلوبة:\n-->
+<!--         1. \tالOBD-II Scanner (ELM327): يتصل هذا الجهاز بمنفذ OBD-II الخاص بسيارتك ويقوم بتوصيل البيانات التشخيصية.\n-->
+<!--         2. \tالRaspberry Pi: سيتفاعل هذا الجهاز مع الماسح الضوئي OBD-II لجمع البيانات.\n-->
+<!--         3. \tالBluetooth: للاتصال اللاسلكي بين Raspberry Pi وهاتفك.\n-->
+<!--         4. \tاتصال Wi-Fi: لتوصيل Raspberry Pi بنقطة الاتصال المحمولة لديك لاستعادة عنوان IP.\n\n-->
+<!--         خطوات تكوين ميزة التشخيص واستخدامها:\n\n-->
+<!--         1.\tإعداد وتكوين Raspberry Pi:\n-->
+<!--         \t- تأكد من تشغيل جهاز Raspberry Pi وتمكين Bluetooth وWi-Fi.\n-->
+<!--         \t- قم بتثبيت البرامج النصية الضرورية لاسترداد البيانات من الماسح الضوئي OBD-II ولإرسال البيانات إلى هاتفك.\n\n-->
+<!--         2. \tالحصول على عنوان MAC الخاص بالبلوتوث:\n-->
+<!--         \t- على جهازك المحمول، انتقل إلى "الإعدادات".\n-->
+<!--         \t- انتقل إلى "حول الهاتف".\n-->
+<!--         \t- حدد معلومات الحالة.\n-->
+<!--         \t- ابحث عن عنوان Bluetooth وقم بتدوينه. هذا العنوان مطلوب لتأسيس اتصال Bluetooth مع Raspberry Pi.\n\n-->
+<!--         3. \tاحصل على عنوان IP الخاص بـ Raspberry Pi:\n-->
+<!--         \t- تأكد من اتصال جهاز Raspberry Pi بنقطة اتصال هاتفك المحمول.\n-->
+<!--         \t- على جهازك المحمول، انتقل إلى "الإعدادات".\n-->
+<!--         \t- حدد الاتصالات.\n-->
+<!--         \t- انتقل إلى نقطة اتصال الهاتف المحمول والربط.\n-->
+<!--         \t- حدد نقطة الاتصال المحمولة.\n-->
+<!--         \t- اختر "إدارة نقطة الاتصال المحمولة".\n-->
+<!--         \t- ابحث عن قسم "الأجهزة المتصلة" وقم بتدوين عنوان IP الخاص بـ Raspberry Pi.\n\n-->
+<!--         4.\tتوصيل Raspberry Pi بالماسح الضوئي obd-ii:\n-->
+<!--         \t- قم بتوصيل الماسح الضوئي obd-ii بمنفذ obd-ii الخاص بسيارتك (الموجود عادة أسفل لوحة القيادة).\n-->
+<!--         \t- قم بإقران الماسح الضوئي obd-ii مع Raspberry Pi عبر البلوتوث.\n\n-->
+<!--         5. \tتكوين تطبيق AutoMate:\n-->
+<!--         \t- افتح تطبيق AutoMate على هاتفك.\n-->
+<!--         \t- انتقل إلى جزء "التشخيص".\n-->
+<!--         \t- إذا كانت هذه هي المرة الأولى لك، فستكون القائمة فارغة.\n-->
+<!--         \t- انقر فوق الزر "معلومات" لمراجعة إرشادات التكوين إذا لزم الأمر.\n-->
+<!--         \t- انقر فوق الزر "استيراد" لبدء عملية استيراد البيانات.\n\n-->
+<!--         6. \tأدخل معلومات Bluetooth وIP:\n-->
+<!--         \t- أدخل عنوان Bluetooth MAC الذي تم الحصول عليه في الخطوة 2.\n-->
+<!--         \t- أدخل عنوان IP الخاص بـ Raspberry Pi الذي تم الحصول عليه في الخطوة 3.\n-->
+<!--         \t- انقر فوق "اتصال" لتأسيس اتصال Bluetooth وبدء نقل البيانات.\n\n-->
+<!--         7. \tاستيراد بيانات التشخيص:\n-->
+<!--         \t- عند نجاح الاتصال، سيطالبك تنبيه باختيار ملف البيانات التشخيصية.\n-->
+<!--         \t- حدد ملف car_data.zip. يحتوي هذا الملف على كافة التقارير التشخيصية التي تم استردادها من Raspberry Pi.\n-->
+<!--         \t- بمجرد اكتمال الاستيراد، سيتم تحديث القائمة الموجودة في جزء "التشخيص" بالتقارير الجديدة.\n\n-->
+<!--         8. \tعرض التقارير التشخيصية:\n-->
+<!--         \t- سيتم إدراج التقارير التشخيصية في جزء "التشخيص".\n-->
+<!--         \t- يمكنك تصفية التقارير حسب السنة والشهر واليوم والساعة باستخدام خيارات التصفية.\n-->
+<!--         \t- انقر فوق أحد التقارير لعرض معلومات تفصيلية حول البيانات التشخيصية.\n\n-->
+<!--         باتباع هذه الخطوات، يمكنك استخدام ميزة التشخيص بنجاح في تطبيق AutoMate، والاستفادة من الماسح الضوئي OBD-II وRaspberry Pi للحصول على تقارير تشخيص السيارة وعرضها مباشرة على هاتفك."-->
+<!--    </string>-->
     <string name="diagnostic_guide">
          "دليل المستخدم: استخدام ميزة التشخيص في AutoMate\n\n
-         للاستفادة من ميزة التشخيص لتطبيق AutoMate، اتبع الخطوات التالية. تأكد من أن لديك التكوينات الضرورية للأجهزة والشبكة:\n\n
+         للاستفادة من ميزة التشخيص لتطبيق AutoMate، اتبع الخطوات التالية. تأكد من أن لديك الأجهزة اللازمة:\n\n
          الأجهزة والاتصالات المطلوبة:\n
-         1. \tالOBD-II Scanner (ELM327): يتصل هذا الجهاز بمنفذ OBD-II الخاص بسيارتك ويقوم بتوصيل البيانات التشخيصية.\n
-         2. \tالRaspberry Pi: سيتفاعل هذا الجهاز مع الماسح الضوئي OBD-II لجمع البيانات.\n
-         3. \tالBluetooth: للاتصال اللاسلكي بين Raspberry Pi وهاتفك.\n
-         4. \tاتصال Wi-Fi: لتوصيل Raspberry Pi بنقطة الاتصال المحمولة لديك لاستعادة عنوان IP.\n\n
+         1. \tOBD-II Scanner (ELM327): يتصل هذا الجهاز بمنفذ OBD-II الخاص بسيارتك ويقوم بتوصيل البيانات التشخيصية.\n
+         2. \tRaspberry Pi: سيتفاعل هذا الجهاز مع الماسح الضوئي OBD-II لجمع البيانات.\n
+         3. \tBluetooth: للاتصال اللاسلكي بين Raspberry Pi وهاتفك.\n\n
          خطوات تكوين ميزة التشخيص واستخدامها:\n\n
          1.\tإعداد وتكوين Raspberry Pi:\n
-         \t- تأكد من تشغيل جهاز Raspberry Pi وتمكين Bluetooth وWi-Fi.\n
-         \t- قم بتثبيت البرامج النصية الضرورية لاسترداد البيانات من الماسح الضوئي OBD-II ولإرسال البيانات إلى هاتفك.\n\n
-         2. \tالحصول على عنوان MAC الخاص بالبلوتوث:\n
-         \t- على جهازك المحمول، انتقل إلى "الإعدادات".\n
-         \t- انتقل إلى "حول الهاتف".\n
-         \t- حدد معلومات الحالة.\n
-         \t- ابحث عن عنوان Bluetooth وقم بتدوينه. هذا العنوان مطلوب لتأسيس اتصال Bluetooth مع Raspberry Pi.\n\n
-         3. \tاحصل على عنوان IP الخاص بـ Raspberry Pi:\n
-         \t- تأكد من اتصال جهاز Raspberry Pi بنقطة اتصال هاتفك المحمول.\n
-         \t- على جهازك المحمول، انتقل إلى "الإعدادات".\n
-         \t- حدد الاتصالات.\n
-         \t- انتقل إلى نقطة اتصال الهاتف المحمول والربط.\n
-         \t- حدد نقطة الاتصال المحمولة.\n
-         \t- اختر "إدارة نقطة الاتصال المحمولة".\n
-         \t- ابحث عن قسم "الأجهزة المتصلة" وقم بتدوين عنوان IP الخاص بـ Raspberry Pi.\n\n
-         4.\tتوصيل Raspberry Pi بالماسح الضوئي obd-ii:\n
+         \t- تأكد من تشغيل جهاز Raspberry Pi وتمكين تقنية Bluetooth فيه.\n
+         \t- قم بتثبيت البرامج النصية اللازمة لاسترداد البيانات من الماسح الضوئي OBD-II ولإرسال البيانات إلى هاتفك.\n\n
+         2.\tتوصيل Raspberry Pi بالماسح الضوئي OBD-II:\n
          \t- قم بتوصيل الماسح الضوئي obd-ii بمنفذ obd-ii الخاص بسيارتك (الموجود عادة أسفل لوحة القيادة).\n
          \t- قم بإقران الماسح الضوئي obd-ii مع Raspberry Pi عبر البلوتوث.\n\n
-         5. \tتكوين تطبيق AutoMate:\n
+         3. \tتكوين تطبيق AutoMate:\n
          \t- افتح تطبيق AutoMate على هاتفك.\n
          \t- انتقل إلى جزء "التشخيص".\n
          \t- إذا كانت هذه هي المرة الأولى لك، فستكون القائمة فارغة.\n
          \t- انقر فوق الزر "معلومات" لمراجعة إرشادات التكوين إذا لزم الأمر.\n
          \t- انقر فوق الزر "استيراد" لبدء عملية استيراد البيانات.\n\n
-         6. \tأدخل معلومات Bluetooth وIP:\n
-         \t- أدخل عنوان Bluetooth MAC الذي تم الحصول عليه في الخطوة 2.\n
-         \t- أدخل عنوان IP الخاص بـ Raspberry Pi الذي تم الحصول عليه في الخطوة 3.\n
-         \t- انقر فوق "اتصال" لتأسيس اتصال Bluetooth وبدء نقل البيانات.\n\n
-         7. \tاستيراد بيانات التشخيص:\n
+         4. \tاستيراد بيانات التشخيص:\n
          \t- عند نجاح الاتصال، سيطالبك تنبيه باختيار ملف البيانات التشخيصية.\n
          \t- حدد ملف car_data.zip. يحتوي هذا الملف على كافة التقارير التشخيصية التي تم استردادها من Raspberry Pi.\n
          \t- بمجرد اكتمال الاستيراد، سيتم تحديث القائمة الموجودة في جزء "التشخيص" بالتقارير الجديدة.\n\n
-         8. \tعرض التقارير التشخيصية:\n
+         5. \tعرض التقارير التشخيصية:\n
          \t- سيتم إدراج التقارير التشخيصية في جزء "التشخيص".\n
          \t- يمكنك تصفية التقارير حسب السنة والشهر واليوم والساعة باستخدام خيارات التصفية.\n
          \t- انقر فوق أحد التقارير لعرض معلومات تفصيلية حول البيانات التشخيصية.\n\n
