--- a/app/src/main/res/values-ar-rLB/strings.xml
+++ b/app/src/main/res/values-ar-rLB/strings.xml
@@ -176,9 +176,9 @@
          "دليل المستخدم: استخدام ميزة التشخيص في AutoMate\n\n
          للاستفادة من ميزة التشخيص لتطبيق AutoMate، اتبع الخطوات التالية. تأكد من أن لديك الأجهزة اللازمة:\n\n
          الأجهزة والاتصالات المطلوبة:\n
-         1. \tOBD-II Scanner (ELM327): يتصل هذا الجهاز بمنفذ OBD-II الخاص بسيارتك ويقوم بتوصيل البيانات التشخيصية.\n
-         2. \tRaspberry Pi: سيتفاعل هذا الجهاز مع الماسح الضوئي OBD-II لجمع البيانات.\n
-         3. \tBluetooth: للاتصال اللاسلكي بين Raspberry Pi وهاتفك.\n\n
+         1. \tالOBD-II Scanner (ELM327): يتصل هذا الجهاز بمنفذ OBD-II الخاص بسيارتك ويقوم بتوصيل البيانات التشخيصية.\n
+         2. \tالRaspberry Pi: سيتفاعل هذا الجهاز مع الماسح الضوئي OBD-II لجمع البيانات.\n
+         3. \tالBluetooth: للاتصال اللاسلكي بين Raspberry Pi وهاتفك.\n\n
          خطوات تكوين ميزة التشخيص واستخدامها:\n\n
          1.\tإعداد وتكوين Raspberry Pi:\n
          \t- تأكد من تشغيل جهاز Raspberry Pi وتمكين تقنية Bluetooth فيه.\n
